load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

cc_binary(
    name = "nut_exporter",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/strings:str_format",
        "@com_github_jupp0r_prometheus_cpp//pull",
        "@com_github_networkupstools_nut//:nutclient",
    ],
)

pkg_tar(
    name = "package",
    srcs = [
        "nut_exporter",
        "@com_github_networkupstools_nut//:upsd",
        "@com_github_networkupstools_nut//:usbhid-ups",
    ],
)

container_image(
    name = "nut_exporter_image",
    base = "@cc_image_base//image",
    files = [
        "nut_exporter",
        "@com_github_networkupstools_nut//:upsd",
        "@com_github_networkupstools_nut//:usbhid-ups",
    ],
)
