module(name = "nut_exporter")

bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "prometheus-cpp", version = "1.2.4")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "bookworm-slim",
)
use_repo(oci, "debian", "debian_linux_amd64")
