module(name = "nut_exporter")

bazel_dep(name = "abseil-cpp", version = "20230802.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "prometheus-cpp", version = "1.2.4")
bazel_dep(name = "rules_cc", version = "0.0.13")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "0.10.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "bookworm-slim",
)

use_repo(oci, "debian", "debian_linux_amd64")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_networkupstools_nut",
    build_file = "//external:nut.BUILD",
    sha256 = "2f1ed256a6b3fcac27e8e1e4f47fbf14d20431504d454fb5a6cac9d257e9feee",
    strip_prefix = "nut-e01e8912eff2c27fb30c27019ed7eba131b13aec",
    urls = ["https://github.com/networkupstools/nut/archive/e01e8912eff2c27fb30c27019ed7eba131b13aec.tar.gz"],
)

http_archive(
    name = "com_github_libusb_libusb",
    build_file = "//external:libusb.BUILD",
    integrity = "sha256-RZy88lN+aYBpSBVNdEYUrxzQZoqNjBoFOOW2i2+4W9c=",
    strip_prefix = "libusb-cc498ded18fb2c6e4506c546d0351c4ae91ef2cc",
    urls = ["https://github.com/libusb/libusb/archive/cc498ded18fb2c6e4506c546d0351c4ae91ef2cc.tar.gz"],
)
